kubernetes/cluster-0/apps/webapi1/webapi1/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi1
spec:
  selector:
    matchLabels:
      app: webapi1
  template:
    metadata:
      labels:
        app: webapi1
    spec:
      containers:
        - name: webapi1
          image: ghcr.io/sillock-inc/webapi1:v0.1.0
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
