kubernetes/cluster-0/apps/webapi1/webapi1/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webapi1
spec:
  selector:
    app: webapi1
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
